planning review with assignments and colors

--- a/views/_not_assigned_bookings.erb
+++ b/views/_not_assigned_bookings.erb
@@ -1,9 +1,8 @@
-<div>
+<div id="booking_list">
   <form name="filter" class="guiblock">
          <h3 class="left-float" style="position: relative; top: 5px">Reservas</h3>
     <div class="formrow right-float">
       <select id="filter" class="fieldcontrol">
-        <option value="pending">Mostrar pendientes de asignar</option>
         <option value="all">Mostrar todos</option>
       </select>
     </div>
