--- a/views/bookings_management.erb
+++ b/views/bookings_management.erb
@@ -47,7 +47,7 @@
          <%% if (entity.payment_status == 'deposit') { %><span class="element-status doing-status smaller_text">d</span> <%% } %>
          <%% if (entity.payment_status == 'total') { %><span class="element-status done-status smaller_text">t</span> <%%}%>
       </td>       
-      <td class="table-cell centered_text"><%%= entity.item_id %> </td>
+      <td class="table-cell centered_text"><%%= entity.booking_lines[0].item_id %> </td>
       <td class="table-cell centered_text"><%%= self.formatDate(entity.date_from,'dd.MM.yyyy') %> </td>
       <td class="table-cell centered_text"><%%= self.formatDate(entity.date_to,'dd.MM.yyyy') %> </td>
       <td class="table-cell centered_text">
